# hahitantsoa-titan-erp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLANS.md  README.md  compose.agent-ci.yaml  compose.yaml  opencode.json  pyproject.toml
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.opencode/agents/: backend-orchestrator.md  docs-agent.md  frontend-orchestrator.md  review-agent.md
.opencode/commands/: pr-create.md  task-start.md  worktree-preflight.md
backend/: Dockerfile  README.md  manage.py
backend/apps/: README.md
backend/config/: asgi.py  env.py  health.py  metrics.py  settings.py  urls.py  wsgi.py
docs/adr/: ADR-001-monorepo.md  ADR-002-modular-django-monolith.md  ADR-003-technical-stack.md  ADR-004-reservation-confirmation.md  ADR-005-shared-inventory-between-business-scopes.md  ADR-006-titan-excludes-venues-and-services.md  ADR-007-private-sensitive-documents.md  ADR-008-rbac-policy.md  ADR-008-secure-lan-and-internet-access.md  ADR-009-django-sessions-and-backend-permissions.md  ADR-010-docker-compose-from-foundation.md
docs/ai-agents/: AI_ORCHESTRATION_INDEX.md  F113_AGENT_WORKFLOW_INVENTORY.md  NEW_CONVERSATION_STARTERS.md  README.md  agent-command-runbook.md  agent-profiles.md  autonomous-agent-policy.md  backend-agent-template.md  cross-agent-acceptance-tests.md  cross-agent-compatibility.md  frontend-agent-template.md  frontend-quality-workflow.md  github-repository-rules-checklist.md  macro-goal-contract.md  macro-goal-orchestrator.md  orchestrator-action-ledger.md  (+13 more)
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
(+787 files in other folders)
