[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hahitantsoa-titan-erp"
version = "0.1.0"
description = "Backend foundation for the Hahitantsoa / Titan ERP."
requires-python = ">=3.14,<3.15"
dependencies = [
    "Django>=5.2.8,<5.3",
    "djangorestframework>=3.17,<3.18",
    "drf-spectacular>=0.29,<0.30",
    "psycopg[binary]>=3.2,<4",
]

[tool.setuptools]
package-dir = {"" = "backend"}
packages = ["config"]
