[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hahitantsoa-titan-erp"
version = "0.1.0"
description = "Backend foundation for the Hahitantsoa / Titan ERP."
requires-python = ">=3.14,<3.15"
dependencies = [
    "Django>=5.2.8,<5.3",
    "djangorestframework>=3.17,<3.18",
    "drf-spectacular>=0.29,<0.30",
    "psycopg[binary]>=3.2,<4",
    "weasyprint>=63,<64",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-django>=4.11,<5",
    "ruff>=0.15,<0.16",
]

[tool.setuptools]
package-dir = {"" = "backend"}
packages = ["config"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["backend", "tests"]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["tests"]
addopts = "-ra"
